--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,8 @@ queueScatterGather
 /bar*
 integrationtests/
 public/testdata/onTheFlyOutputTest.vcf
-private/testdata/onTheFlyOutputTest.vcf
-lib
-html
-gatkdocs
-dist
-build
-resources
+build/
+dist/
+dump/
+lib/
+out/
