Added mvninstall.queue.all target which includes private, along with supporting sub-targets.

--- a/build.xml
+++ b/build.xml
@@ -327,12 +327,16 @@
 
 
     <!-- INIT OVERRIDES: call these targets BEFORE init to override build defaults -->
-    <target name="init.publiconly">
+    <target name="init.build.publiconly">
         <property name="build.target" value="public" />
     </target>
 
-    <target name="init.publicprotectedonly">
+    <target name="init.build.publicprotectedonly">
         <property name="build.target" value="protected" />
+    </target>
+
+    <target name="init.build.all">
+        <property name="build.target" value="all" />
     </target>
 
     <target name="init.javaonly">
@@ -842,19 +846,23 @@
     <!-- Release-related tasks                                                            -->
     <!-- ******************************************************************************** -->
 
-    <target name="init.buildgatkfull" depends="init.publicprotectedonly, init.javaonly">
+    <target name="init.executable.gatkfull" depends="init.build.publicprotectedonly, init.javaonly">
         <property name="executable" value="GenomeAnalysisTK" />
     </target>
 
-    <target name="init.buildgatklite" depends="init.publiconly, init.javaonly">
+    <target name="init.executable.gatklite" depends="init.build.publiconly, init.javaonly">
         <property name="executable" value="GenomeAnalysisTKLite" />
     </target>
 
-    <target name="init.buildqueuefull" depends="init.publicprotectedonly, init.javaandscala">
+    <target name="init.executable.queueall" depends="init.build.all, init.javaandscala">
         <property name="executable" value="Queue" />
     </target>
 
-    <target name="init.buildqueuelite" depends="init.publiconly, init.javaandscala">
+    <target name="init.executable.queuefull" depends="init.build.publicprotectedonly, init.javaandscala">
+        <property name="executable" value="Queue" />
+    </target>
+
+    <target name="init.executable.queuelite" depends="init.build.publiconly, init.javaandscala">
         <property name="executable" value="QueueLite" />
     </target>
 
@@ -906,13 +914,15 @@
     </target>
 
     <!-- Package specific versions of the GATK/Queue. ALWAYS do an ant clean before invoking these! -->
-    <target name="package.gatk.full" depends="init.buildgatkfull,package" />
+    <target name="package.gatk.full" depends="init.executable.gatkfull,package" />
 
-    <target name="package.gatk.lite" depends="init.buildgatklite,package" />
+    <target name="package.gatk.lite" depends="init.executable.gatklite,package" />
 
-    <target name="package.queue.full" depends="init.buildqueuefull,package" />
+    <target name="package.queue.all" depends="init.executable.queueall,package" />
 
-    <target name="package.queue.lite" depends="init.buildqueuelite,package" />
+    <target name="package.queue.full" depends="init.executable.queuefull,package" />
+
+    <target name="package.queue.lite" depends="init.executable.queuelite,package" />
 
 
     <!-- Release a build. Don't call this target directly. Call one of the specific release targets below -->
@@ -974,6 +984,8 @@
     <target name="mvninstall.gatk.full" depends="package.gatk.full,mvninstall" />
 
     <target name="mvninstall.gatk.lite" depends="package.gatk.lite,mvninstall" />
+
+    <target name="mvninstall.queue.all" depends="package.queue.all,mvninstall" />
 
     <target name="mvninstall.queue.full" depends="package.queue.full,mvninstall" />
 
