Abstract connection to MongoDB so we can specify it through JSON file. Include 2 JSON spec files in GenomeAnalysisTK.jar
Create MongoDBManager, which keeps track of connections based on Locator class. Locators can be instantiated directly, or read from JSON files (NA12878DBArgumentCollection uses the GSon library)

--- a/build.xml
+++ b/build.xml
@@ -681,6 +681,9 @@
               <include name="**/gatk/**/*.class" />
               <include name="**/alignment/**/*.class"/>
             </fileset>
+            <fileset dir="${java.private.source.dir}">
+                <include name="**/gatk/**/resources/*.*" />
+            </fileset>
             <fileset dir="${R.script.staging.dir}">
                 <include name="**/gatk/**/*.R"/>
                 <include name="**/alignment/**/*.R"/>
