--- a/ivy.xml
+++ b/ivy.xml
@@ -82,7 +82,7 @@
         <!-- testing and evaluation dependencies -->
         <dependency org="org.testng" name="testng" rev="5.14.1"/>
         <dependency org="org.uncommons" name="reportng" rev="1.1.2"/>
-        <dependency org="com.google.code.caliper" name="caliper" rev="1.0-SNAPSHOT"/>
+        <dependency org="com.google.caliper" name="caliper" rev="0.5-rc1"/>
 
         <!-- Contracts for Java and dependencies -->
         <dependency org="com.google.code.cofoja" name="cofoja" rev="1.0-r139"/>
