--- a/ivy.xml
+++ b/ivy.xml
@@ -61,6 +61,7 @@
         <dependency org="commons-lang" name="commons-lang" rev="2.5"/>
         <dependency org="commons-logging" name="commons-logging" rev="1.1.1"/>
         <dependency org="commons-io" name="commons-io" rev="2.1"/>
+        <dependency org="commons-collections" name="commons-collections" rev="3.2.1"/>
         <dependency org="org.apache.commons" name="commons-math" rev="2.2"/>
 
         <!-- Lucene core utilities -->
