--- a/build.xml
+++ b/build.xml
@@ -708,6 +708,9 @@
                 <include name="**/sting/gatk/**/*.R"/>
                 <include name="**/sting/alignment/**/*.R"/>
             </fileset>
+            <fileset dir="${java.public.source.dir}">
+                <include name="**/phonehome/*.key"/>
+            </fileset>
             <fileset dir="${key.dir}">
                 <include name="**/*.key"/>
             </fileset>
