--- a/build.xml
+++ b/build.xml
@@ -669,21 +669,13 @@
         </jar>
     </target>
 
-    <target name="variant.jar" depends="gatk.compile,init.jar">
-        <jar jarfile="${dist.dir}/variant.jar">
-            <fileset dir="${java.classes}">
-              <include name="org/broadinstitute/variant/**/*.class"/>
-            </fileset>
-        </jar>
-    </target>
-
     <target name="na12878kb.jar" depends="gatk.compile,init.jar">
         <jar jarfile="${dist.dir}/na12878kb.jar">
             <fileset dir="${java.classes}">
               <include name="org/broadinstitute/sting/utils/GenomeLocParser*.class"/>
               <include name="org/broadinstitute/sting/utils/GenomeLoc.class"/>
               <include name="org/broadinstitute/sting/utils/HasGenomeLocation.class"/>
-              <include name="org/broadinstitute/variant/utils/BaseUtils.class"/>
+              <include name="org/broadinstitute/sting/utils/BaseUtils.class"/>
               <include name="org/broadinstitute/sting/utils/Utils.class"/>
               <include name="org/broadinstitute/sting/utils/exceptions/**/*.class"/>
               <include name="org/broadinstitute/sting/gatk/walkers/na12878kb/core/**/*.class"/>
@@ -753,7 +745,7 @@
         </jar>
     </target>
 
-    <target name="sting.jar" depends="sting-utils.jar, variant.jar, gatk.jar, queue.jar" />
+    <target name="sting.jar" depends="sting-utils.jar, gatk.jar, queue.jar" />
 
     <target name="init.manifests" depends="sting.jar">
         <pathconvert property="jar.classpath" pathsep=" ">
