--- a/build.xml
+++ b/build.xml
@@ -91,9 +91,8 @@
     <property name="key.dir" value="${public.dir}/keys" />
 
     <!-- Contracts for Java -->
-    <!-- By default, enabled only for test targets -->
-    <!-- To disable for test targets, run with -Duse.contracts=false -->
-    <!-- To enable for non-test targets, run with -Duse.contracts=true -->
+    <!-- Disabled by default -->
+    <!-- To enable, run with -Duse.contracts=true -->
     <property name="java.contracts.dir" value="${build.dir}/java/contracts" />
     <property name="contracts.version" value="1.0-r139" />
     <property name="cofoja.jar" value="${lib.dir}/cofoja-${contracts.version}.jar"/>
@@ -1203,8 +1202,8 @@
         </scalac>
     </target>
 
-    <!-- NOTE: contracts enabled for all tests -->
-    <target name="test.compile" depends="init.usecontracts,dist,test.java.compile,test.scala.compile" />
+    <!-- NOTE: contracts disabled for all tests now, since contracts don't work with Java 7 -->
+    <target name="test.compile" depends="dist,test.java.compile,test.scala.compile" />
 
 
     <!-- Run test macro -->
@@ -1340,9 +1339,9 @@
     <target name="committests" depends="unittest,integrationtest,pipelinetest" />
 
     <!-- Order of the dependencies is significant in the *.release.tests targets -->
-    <target name="gatkfull.binary.release.tests" depends="init.usecontracts,package.gatk.full,init.testgatkjar,unittest,integrationtest" />
+    <target name="gatkfull.binary.release.tests" depends="package.gatk.full,init.testgatkjar,unittest,integrationtest" />
 
-    <target name="queuefull.binary.release.tests" depends="init.usecontracts,package.queue.full,init.testqueuejar,pipelinetest" />
+    <target name="queuefull.binary.release.tests" depends="package.queue.full,init.testqueuejar,pipelinetest" />
 
     <!-- Our four different test types: UnitTest, IntegrationTest, LargeScaleTest, PipelineTest -->
     <target name="unittest" depends="test.compile,test.init" description="Run unit tests">
@@ -1472,7 +1471,6 @@
 
         <property name="testng.classpath" value="testng.default.classpath" />
         <property name="test.maxmemory" value="${test.default.maxmemory}"/>
-        <property name="include.contracts" value="true" />
         <property name="include.scala" value="true" />
 
         <run-test testtype="${single}" outputdir="${report}/${single}" runfailed="false"/>
